Test object on nav bar that redirects to test.html.

--- a/webapp/src/main/resources/templates/index.html
+++ b/webapp/src/main/resources/templates/index.html
@@ -31,11 +31,14 @@
         <a>Gallery</a>
         <a>Event</a>
         <a>Exchange</a>
+        <a href="/test">Test</a>
+        <!-- <input type="button"  onclick="location.href='/test.html'" value="test" > -->
     </div>
 
     <div class = "placeholder">
         <p>   </p>
     </div>
+    
 
 </div>
 
