Pushing current changes. I am working on removing .idea/* files generated from my IDE from the git path. I also changed the .css a bit. It wasn't looking right on my machine.

--- a/webapp/src/main/resources/templates/index.html
+++ b/webapp/src/main/resources/templates/index.html
@@ -42,9 +42,9 @@
 
 </div>
 
-<h1 stype="text-align:center;"> - About Us - </h1>
-<div class = "Exchange">
-    <h2>Exchange</h2>
+<h1> - About Us - </h1>
+<h1> - Exchange - </h1>
+<div class="exchange">
     <p>Exchange books, get points, spend points to discount books.
         If you’re downsizing, spring cleaning, or helping family or friends clean house,
         bring in the books you are ready to part with. When you bring in books, we count
@@ -54,13 +54,12 @@
         Exchange points give you discounts on books that you purchase at our store.
         Moving out of the area? That’s fine, you can donate our points to teachers,
         who always need help buying books for their students.</p>
+    <div class = "imgBox">
+        <img src = img/exchange.jpg>
+    </div>
 </div>
 
-<div class = "imgBox">
-    <img src = img/exchange.jpg>
-</div>
-
-<h1 style="text-align: center;"> - Current Event - </h1>
+<h1 style="text-align: center;"> - Current Events - </h1>
 
 <div class = "container">
     <button class="banners-display-left" onclick="plusDivs(-1)"><img src=img/back.png></button>
@@ -70,7 +69,7 @@
     <img class = "banners" src = img/eventbanners/readingNightBanner.png>
 </div>
 
-<h1 style="text-align: center;"> - Staff's choice -</h1>
+<h1 style="text-align: center;"> - Staff Picks -</h1>
 
 <div class="box">
 
@@ -125,7 +124,7 @@
 </div>
 
 <div class = "footer">
-    <p>2017 S 1100 E Salt Lake City, Utah           Contact us: (801)-485-3913</p>
+    <p>2017 S 1100 E Salt Lake City, Utah<br>Contact us: (801)-485-3913</p>
 </div>
 
 </body>
