--- a/webapp/src/main/resources/static/home.css
+++ b/webapp/src/main/resources/static/home.css
@@ -33,6 +33,11 @@
     
     
   }
+  h1 {
+      text-align: center;
+      white-space: nowrap;
+      overflow: hidden;
+  }
 .picAndStuff{
   background-image: url("img/home.jpg");
   background-size: cover;
@@ -86,22 +91,49 @@
 }
 
 .exchange{
-  position: relative;
-  float: left;
-  width: 40%;
-  height:300px;
-  background: #f0b545;
-  padding: 5%;
-
+    /*border: 1px solid red;*/
+    position: relative;
+    float: left;
+  /*width: 40%;*/
+  /*height:300px;*/
+  /*background: #f0b545;*/
+  /*padding: 5%;*/
 }
+.exchange p {
+    /*border: 1px solid red;*/
+    background: #f0b545;
+    text-align: center;
+    /*display: inline-block;*/
+    /*width: 33%;*/
+    padding: 3%;
+    margin: 0;
+    /*max-height: 276px;*/
+    /*min-height: 276px;*/
+}
+.exchange img {
+    /*border: 1px solid red;*/
+    height: auto;
+    width: 100%;
+    /*max-height: 335px;*/
+    /*min-height: 335px;*/
+}
+
 .imgBox{
-  position: relative;
-  float: left;
-  right:0%;
+  /*position: relative;*/
+  /*float: left;*/
+  /*right:0%;*/
   padding: 5%;
-  width:40%;
-  height:300px;
-  overflow: hidden;
+  /*width:40%;*/
+  /*height:300px;*/
+  /*overflow: hidden;*/
+  /*  width: 55%;*/
+  /*  border: 1px solid blue;*/
+    /*height: 335px;*/
+    /*background-image: url(img/exchange.JPG);*/
+    /*background-repeat: no-repeat;*/
+    /*background-size: 100% 100%;*/
+    display: block;
+    float: right;
 }
 .layer {
     background-color: rgba(250, 249, 194, 0.699);
