--- a/webapp/src/main/resources/templates/index.html
+++ b/webapp/src/main/resources/templates/index.html
@@ -43,7 +43,7 @@
       <div class="site-mobile-menu-body"></div>
     </div>
    
-    <div class="top-bar py-3 bg-light" id="home-section">
+    <div class="top-bar py-3 bg-light" th:style="'background: #9d1d19!important;'" id="home-section">
       <div class="container">
         <div class="row align-items-center">
          
@@ -57,8 +57,8 @@
           </div>
           <div class="col-6">
             <p class="mb-0 float-right">
-              <span class="mr-3"><a href="tel:8014853913"> <span class="icon-phone mr-2" style="position: relative; top: 2px;"></span><span class="d-none d-lg-inline-block text-black">(801)485-3913</span></a></span>
-              <span><a href="mailto:customerservice@citywbooks.com"><span class="icon-envelope mr-2" style="position: relative; top: 2px;"></span><span class="d-none d-lg-inline-block text-black">customerservice@citywbooks.com</span></a></span>
+              <span class="mr-3"><a href="tel:8014853913"> <span class="icon-phone mr-2" style="position: relative; top: 2px; color: #fff2e0!important;"></span><span class="d-none d-lg-inline-block text-black">(801)485-3913</span></a></span>
+              <span><a href="mailto:customerservice@citywbooks.com"><span class="icon-envelope mr-2" style="position: relative; top: 2px; color: #fff2e0!important;"></span><span class="d-none d-lg-inline-block text-black">customerservice@citywbooks.com</span></a></span>
             </p>
             
           </div>
@@ -66,13 +66,13 @@
       </div> 
     </div>
 
-    <header class="site-navbar py-4 bg-white js-sticky-header site-navbar-target" role="banner">
+    <header class="site-navbar py-4 bg-white js-sticky-header site-navbar-target" role="banner" style="background: #fff2e0!important;">
 
       <div class="container">
         <div class="row align-items-center">
           
           <div class="col-6 col-xl-2">
-            <h1 class="mb-0 site-logo"><a href="/index.html" class="text-black mb-0"><img th:src="@{/images/logo.jpg}" class="img-fluid" ><span class="text-primary"></span> </a></h1>
+            <h1 class="mb-0 site-logo"><a href="/index.html" class="text-black mb-0"><img th:src="@{/images/logos/og_logo.png}" class="img-fluid" ><span class="text-primary"></span> </a></h1>
           </div>
           <div class="col-12 col-md-10 d-none d-xl-block">
             <nav class="site-navigation position-relative text-right" role="navigation">
@@ -99,14 +99,14 @@
 
   
      
-    <div class="site-blocks-cover overlay" data-aos="fade" data-stellar-background-ratio="0.5">
+    <div class="site-blocks-cover overlay" th:style="'background: url(/images/storefront/central.jpg) no-repeat 50% fixed / cover;'" data-aos="fade" data-stellar-background-ratio="0.5">
       <div class="container">
         <div class="row align-items-center justify-content-center">
 
           <div class="col-md-12" data-aos="fade-up" data-aos-delay="400">
                         
             <div class="row mb-4">
-              <div class="col-md-7">
+              <div class="col-md-7" th:style="'background: rgb(6,6,8,0.5);'">
                 <h1>Welcome</h1>
                 <p class="mb-5 lead">We are an independently-owned new and used bookstore located in Salt Lake City, Utah. 
                   We have over 90,000 items in our constantly-changing inventory, and we catalog an additional 1,000+ books per week. 
@@ -261,7 +261,7 @@
       </div>
     </div>
     
-    <div class="site-blocks-cover inner-page-cover overlay get-notification"  style="background-image: url(images/hero_2.jpg); background-attachment: fixed;" data-aos="fade">
+    <div class="site-blocks-cover inner-page-cover overlay get-notification"  th:style="'background: url(/images/storefront/central.jpg)  no-repeat 50% fixed / cover;'" data-aos="fade">
       <div class="container">
 
         <div class="row align-items-center justify-content-center">
@@ -416,11 +416,11 @@
       </div>
     </div>
     
-    <div class="site-blocks-cover overlay get-notification" id="special-section" style="background-image: url(images/hero_2.jpg); background-attachment: fixed; background-position: top;" data-aos="fade">
+    <div class="site-blocks-cover overlay get-notification" id="special-section" th:style="'background: url(/images/storefront/central.jpg)  no-repeat 50% fixed / cover;'" data-aos="fade">
       <div class="container">
 
         <div class="row align-items-center justify-content-center">
-          <div class="col-md-7 text-center">
+          <div class="col-md-7 text-center" style="display: none;">
             <h3 class="section-sub-title">Special Promo</h3>
             <h3 class="section-title text-white mb-4">Summer Sale</h3>
             <p class="mb-5 lead">Repudiandae nostrum natus excepturi fuga ullam accusantium vel ut eveniet aut consequatur laboriosam ipsam.</p>
@@ -445,7 +445,7 @@
         <div class="row align-items-stretch">
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up">
             <div class="unit-4 d-flex">
-              <div class="unit-4-icon mr-4"><span class="text-primary icon-pie_chart"></span></div>
+              <div class="unit-4-icon mr-4"><span class="text-primary icon-pie_chart" style="color: #9d1d19!important;"></span></div>
               <div>
                 <h3>Business Consulting</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
@@ -455,7 +455,7 @@
           </div>
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="unit-4 d-flex">
-              <div class="unit-4-icon mr-4"><span class="text-primary icon-backspace"></span></div>
+              <div class="unit-4-icon mr-4"><span class="text-primary icon-backspace" style="color: #9d1d19!important;"></span></div>
               <div>
                 <h3>Market Analysis</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
@@ -465,7 +465,7 @@
           </div>
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="200">
             <div class="unit-4 d-flex">
-              <div class="unit-4-icon mr-4"><span class="text-primary icon-av_timer"></span></div>
+              <div class="unit-4-icon mr-4"><span class="text-primary icon-av_timer" style="color: #9d1d19!important;"></span></div>
               <div>
                 <h3>User Monitoring</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
@@ -477,7 +477,7 @@
 
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="300">
             <div class="unit-4 d-flex">
-              <div class="unit-4-icon mr-4"><span class="text-primary icon-beenhere"></span></div>
+              <div class="unit-4-icon mr-4"><span class="text-primary icon-beenhere" style="color: #9d1d19!important;"></span></div>
               <div>
                 <h3>Seller Consulting</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
@@ -487,7 +487,7 @@
           </div>
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="400">
             <div class="unit-4 d-flex">
-              <div class="unit-4-icon mr-4"><span class="text-primary icon-business_center"></span></div>
+              <div class="unit-4-icon mr-4"><span class="text-primary icon-business_center" style="color: #9d1d19!important;"></span></div>
               <div>
                 <h3>Financial Investment</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
@@ -497,7 +497,7 @@
           </div>
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="500">
             <div class="unit-4 d-flex">
-              <div class="unit-4-icon mr-4"><span class="text-primary icon-cloud_done"></span></div>
+              <div class="unit-4-icon mr-4"><span class="text-primary icon-cloud_done" style="color: #9d1d19!important;"></span></div>
               <div>
                 <h3>Financial Management</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
@@ -630,7 +630,7 @@
    
 
 
-    <div class="site-section bg-light" id="contact-section">
+    <div class="site-section bg-light" id="contact-section" style="background: #8f5100!important;">
       <div class="container">
         <div class="row mb-5">
           <div class="col-12 text-center">
@@ -643,7 +643,7 @@
 
             
 
-            <form action="#" class="p-5 bg-white">
+            <form action="#" class="p-5 bg-white" style="background: #fff2e0!important;">
               
               <h2 class="h4 text-black mb-5">Contact Form</h2> 
 
