Events section, added basic colors, backgrounds, and fonts as variables and class options.

--- a/webapp/src/main/resources/static/css/style.css
+++ b/webapp/src/main/resources/static/css/style.css
@@ -1,15 +1,27 @@
 /* Base */
-@font-face {
-  font-family: 'Julius Sans One', sans-serif;
-  /*font-family: 'Nunito', sans-serif;*/
+
+:root
+{
+	--cream: #fff2e0;
+	--sea: #A6BDFF;
+	--mint: #75de98;
+	--sunset: #f0b545;
+	--leather: #8f5100;
+	--deep-red: #9d1d19;
+	--grey: #56585a;
+	--ink: #060808;
+	/*
+	Ink on cream, sea, mint, sunset
+	Cream on deep red, leather, grey, ink
+	Deep red on cream
+	*/
 }
+
 body {
   line-height: 1.7;
-  color: #56585a;
-  font-weight: 400;
-  font-size: 1rem;
-  font-family: 'Nunito', sans-serif;
-  background: #fff2e0;}
+  color: var(--ink);
+  font-family: Nunito;
+  background: var(--cream);}
 
 ::-moz-selection {
   background: #000;
@@ -20,26 +32,30 @@ body {
   color: #fff; }
 
 a {
-  color: #9d1d19;
   -webkit-transition: .3s all ease;
   -o-transition: .3s all ease;
   transition: .3s all ease; }
-a:hover {
-  text-decoration: none; }
+a:link
+{ color: var(--deep-red); text-decoration: none; }
+a:visited 
+{ color: var(--grey); -decoration: none; }
+a:hover 
+{ text-decoration: underline; }
+a:active{text-decoration: none;}
 
 h1, h2, h3, h4, h5,
-.h1, .h2, .h3, .h4, .h5 {
-  /*font-family: "Muli", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; }*/
-  font-family: 'Julius Sans One', sans-serif;
+.h1, .h2, .h3, .h4, .h5 
+{
+  font-family: Nunito;
 }
 .border-2 {
   border-width: 2px; }
 
 .text-black {
-  color: #000 !important; }
+  color: #000 ; }
 
 .bg-black {
-  background: #000 !important; }
+  background: #000 ; }
 
 .color-black-opacity-5 {
   color: rgba(0, 0, 0, 0.5); }
@@ -78,8 +94,8 @@ h1, h2, h3, h4, h5,
   padding: 6px 20px; }
 .btn:hover, .btn:active, .btn:focus {
   outline: none;
-  -webkit-box-shadow: none !important;
-  box-shadow: none !important; }
+  -webkit-box-shadow: none ;
+  box-shadow: none ; }
 .btn.btn-black {
     background: #56585a;
     color: #fff2e0; }
@@ -111,7 +127,7 @@ h1, h2, h3, h4, h5,
   color: #000; }
 
 .line-height-1 {
-  line-height: 1 !important; }
+  line-height: 1 ; }
 
 .bg-black {
   background: #000; }
@@ -119,12 +135,11 @@ h1, h2, h3, h4, h5,
 .form-control {
   height: 43px;
   font-family: 'Nunito', sans-serif;}
-  /*font-family: "Muli", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; }*/
 .form-control:active, .form-control:focus {
   border-color: #9d1d19; }
 .form-control:hover, .form-control:active, .form-control:focus {
-  -webkit-box-shadow: none !important;
-  box-shadow: none !important; }
+  -webkit-box-shadow: none ;
+  box-shadow: none ; }
 
 .site-section {
   padding: 2.5em 0; }
@@ -142,18 +157,19 @@ h1, h2, h3, h4, h5,
 @media (min-width: 768px) {
   .site-section-heading {
     font-size: 3rem; } }
+   
 
 .border-top {
-  border-top: 1px solid #edf0f5 !important; }
+  border-top: 1px solid #edf0f5 ; }
 
 .site-footer {
   padding: 4em 0;
-  background: #fff2e0!important; }
+  background: #fff2e0; }
 @media (min-width: 768px) {
   .site-footer {
     padding: 8em 0; } }
 .site-footer .border-top {
-  border-top: 1px solid rgba(255, 255, 255, 0.1) !important; }
+  border-top: 1px solid rgba(255, 255, 255, 0.1) ; }
 .site-footer p {
   color: #737373; }
 .site-footer h2, .site-footer h3, .site-footer h4, .site-footer h5 {
@@ -187,7 +203,7 @@ h1, h2, h3, h4, h5,
   position: relative; }
 @media (max-width: 991.98px) {
   .hover-bg-enlarge {
-    height: auto !important; } }
+    height: auto ; } }
 .hover-bg-enlarge > div {
   -webkit-transform: scale(1);
   -ms-transform: scale(1);
@@ -201,7 +217,7 @@ h1, h2, h3, h4, h5,
   transform: scale(1.2); }
 @media (max-width: 991.98px) {
   .hover-bg-enlarge .bg-image-md-height {
-    height: 300px !important; } }
+    height: 300px ; } }
 
 .bg-image {
   background-size: cover;
@@ -237,7 +253,7 @@ h1, h2, h3, h4, h5,
   height: 90px;
   display: inline-block;
   border: 2px solid #fff;
-  color: #fff !important;
+  color: #fff ;
   border-radius: 50%;
   position: relative;
   -webkit-transition: .3s all ease-in-out;
@@ -303,32 +319,30 @@ h1, h2, h3, h4, h5,
   font-weight: 900; }
 
 .site-navbar {
-  font-family: 'Julius Sans One'!important;, sans-serif;
   margin-bottom: 0px;
   z-index: 1999;
   position: relative;
-  width: 100%;
-  background: #fff; }
+  width: 100%; }
 .site-navbar .site-navigation.border-bottom {
-  border-bottom: 1px solid #f3f3f4 !important; }
+  border-bottom: 1px solid #f3f3f4 ; }
 .site-navbar .site-navigation .site-menu {
   margin-bottom: 0; }
 .site-navbar .site-navigation .site-menu .active {
-  color: #9d1d19;
+  color: var(--deep-red);
   display: inline-block;
-  padding: 5px 20px; }
+  padding: 5px 10px; }
 .site-navbar .site-navigation .site-menu a {
-  text-decoration: none !important;
+  text-decoration: none ;
   display: inline-block; }
 .site-navbar .site-navigation .site-menu > li {
   display: inline-block; }
 .site-navbar .site-navigation .site-menu > li > a {
-  padding: 5px 20px;
+  padding: 5px 10px;
   color: #000;
   display: inline-block;
-  text-decoration: none !important; }
+  text-decoration: none ; }
 .site-navbar .site-navigation .site-menu > li > a:hover {
-  color: #9d1d19; }
+  color: var(--deep-red); }
 .site-navbar .site-navigation .site-menu .has-children {
   position: relative; }
 .site-navbar .site-navigation .site-menu .has-children > a {
@@ -388,7 +402,7 @@ h1, h2, h3, h4, h5,
   transition: 0s all;
   color: #343a40; }
 .site-navbar .site-navigation .site-menu .has-children .dropdown .active > a {
-  color: #9d1d19 !important; }
+  color: var(--deep-red); }
 .site-navbar .site-navigation .site-menu .has-children .dropdown > li {
   list-style: none;
   padding: 0;
@@ -410,7 +424,7 @@ h1, h2, h3, h4, h5,
   background: #f4f5f9;
   color: #25262a; }
 .site-navbar .site-navigation .site-menu .has-children:hover > a, .site-navbar .site-navigation .site-menu .has-children:focus > a, .site-navbar .site-navigation .site-menu .has-children:active > a {
-  color: #9d1d19; }
+  color: var(--deep-red); }
 .site-navbar .site-navigation .site-menu .has-children:hover, .site-navbar .site-navigation .site-menu .has-children:focus, .site-navbar .site-navigation .site-menu .has-children:active {
   cursor: pointer; }
 .site-navbar .site-navigation .site-menu .has-children:hover > .dropdown, .site-navbar .site-navigation .site-menu .has-children:focus > .dropdown, .site-navbar .site-navigation .site-menu .has-children:active > .dropdown {
@@ -422,7 +436,7 @@ h1, h2, h3, h4, h5,
   opacity: 1; }
 
 .site-mobile-menu {
-  font-family: 'Julius Sans One'!important;, sans-serif;
+  font-family: 'Julius Sans One';, sans-serif;
   width: 300px;
   position: fixed;
   right: 0;
@@ -491,12 +505,12 @@ h1, h2, h3, h4, h5,
   position: relative;
   color: #212529; }
 .site-mobile-menu .site-nav-wrap a:hover {
-  color: #9d1d19; }
+  color: var(--deep-red); }
 .site-mobile-menu .site-nav-wrap li {
   position: relative;
   display: block; }
 .site-mobile-menu .site-nav-wrap li .active {
-  color: #9d1d19; }
+  color: var(--deep-red); }
 .site-mobile-menu .site-nav-wrap .arrow-collapse {
   position: absolute;
   right: 0px;
@@ -561,7 +575,7 @@ h1, h2, h3, h4, h5,
 .site-mobile-menu .site-nav-wrap[data-class="social"] > li {
   width: auto; }
 .site-mobile-menu .site-nav-wrap[data-class="social"] > li:first-child a {
-  padding-left: 15px !important; }
+  padding-left: 15px ; }
 
 .sticky-wrapper {
   position: absolute;
@@ -577,8 +591,8 @@ h1, h2, h3, h4, h5,
   -webkit-box-shadow: 4px 0 20px -5px rgba(0, 0, 0, 0.2);
   box-shadow: 4px 0 20px -5px rgba(0, 0, 0, 0.2); }
 .sticky-wrapper .shrink {
-  padding-top: 10px !important;
-  padding-bottom: 10px !important; }
+  padding-top: 10px ;
+  padding-bottom: 10px ; }
 
 /* Blocks */
 .site-blocks-cover {
@@ -610,14 +624,14 @@ h1, h2, h3, h4, h5,
   font-size: 5rem;
   font-weight: 400;
   /*color: #fff;*/
-  color: #fff2e0!important;
+  color: #fff2e0;
   font-weight: 900; }
 @media (max-width: 991.98px) {
   .site-blocks-cover h1 {
     font-size: 2rem; } }
 .site-blocks-cover p {
   /*color: white;*/
-  color: #fff2e0!important;
+  color: #fff2e0;
   font-size: 1rem;
   line-height: 1.5;
   font-weight: 300; }
@@ -636,7 +650,7 @@ h1, h2, h3, h4, h5,
 
 .site-block-subscribe .form-control {
   font-weight: 300;
-  border-color: #fff !important;
+  border-color: #fff ;
   height: 80px;
   font-size: 22px;
   color: #fff2e0;
@@ -663,8 +677,33 @@ h1, h2, h3, h4, h5,
   font-weight: 200;
   font-style: italic; }
 
-.bg-light {
-  background: #fff2e0; }
+.bg-cream { background: var(--cream); }
+.bg-red { background: var(--deep-red); }  
+.bg-ink { background: var(--ink); }
+.bg-grey { background: var(--grey); }
+.bg-sunset { background: var(--sunset); }
+.bg-leather { background: var(--leather); }
+.bg-mint { background: var(--mint); }
+.bg-sea { background: var(--sea); }
+
+.text-cream { color: var(--cream); }
+.text-red { color: var(--deep-red); }  
+.text-ink { color: var(--ink); }
+.text-grey { color: var(--grey); }
+.text-sunset { color: var(--sunset); }
+.text-leather { color: var(--leather); }
+.text-mint { color: var(--mint); }
+.text-sea { color: var(--sea); }
+
+.ff-NG{ font-family: 'Nanum Gothic', sans-serif; font-size: 4em; }
+.ff-JSO{ font-family: 'Julius Sans One', sans-serif; font-size: 2.5em; }
+.ff-NSB{ font-family: 'Nunito', sans-serif; font-size: 1.6em; font-weight: 600; }
+.ff-NB{ font-family: 'Nunito', sans-serif; font-size: 1.4em; font-weight: 700; }
+.ff-N{ font-family: 'Nunito', sans-serif; font-size: 1.2em; }
+.ff-JSH{ font-family: 'Julius Sans One', sans-serif; font-size: 1.3em; }
+.ff-JS{ font-family: 'Julius Sans One', sans-serif; font-size: 1em; }
+.ff-NL{ font-family: 'Nunito', sans-serif; font-size: 1em; font-weight: 300; }
+.ff-NUL{ font-family: 'Nunito', sans-serif; font-size: .97em; font-weight: 200; }
 
 .feature-blocks-1 {
   position: relative;
@@ -744,8 +783,8 @@ h1, h2, h3, h4, h5,
   flex: 0 0 80px; }
 @media (max-width: 991.98px) {
   .site-blocks-vs .image {
-    margin-left: auto !important;
-    margin-right: auto !important; } }
+    margin-left: auto ;
+    margin-right: auto ; } }
 .site-blocks-vs .image img {
   border-radius: 50%; }
 .site-blocks-vs .image.image-small {
@@ -781,7 +820,7 @@ h1, h2, h3, h4, h5,
   border: 1px solid #e6e6e6; }
 .post-entry, .post-entry .text {
   border-radius: 4px;
-  border-top: none !important; }
+  border-top: none ; }
 .post-entry .date {
   color: #fff2e0;
   font-weight: normal;
@@ -806,13 +845,13 @@ h1, h2, h3, h4, h5,
   font-size: 0.8rem;
   margin: 0 20px; }
 .site-block-tab .nav-item:first-child {
-  margin-left: 0 !important; }
+  margin-left: 0 ; }
 .site-block-tab .nav-item > a {
-  padding-left: 0 !important;
-  background: none !important;
-  padding-right: 0 !important;
+  padding-left: 0 ;
+  background: none ;
+  padding-right: 0 ;
   border-bottom: 2px solid transparent;
-  border-radius: 0 !important;
+  border-radius: 0 ;
   font-weight: bold;
   color: #fff2e0; }
 .site-block-tab .nav-item > a:hover, .site-block-tab .nav-item > a.active {
@@ -840,23 +879,23 @@ h1, h2, h3, h4, h5,
   opacity: .2; }
 
 .slide-one-item.home-slider .owl-nav {
-  position: absolute !important;
-  top: 50% !important;
-  bottom: auto !important;
+  position: absolute ;
+  top: 50% ;
+  bottom: auto ;
   width: 100%; }
 @media (max-width: 991.98px) {
   .slide-one-item.home-slider .owl-nav {
     display: none; } }
 
 .slide-one-item.home-slider .owl-prev {
-  left: 10px !important; }
+  left: 10px ; }
 
 .slide-one-item.home-slider .owl-next {
-  right: 10px !important; }
+  right: 10px ; }
 
 .slide-one-item.home-slider .owl-prev, .slide-one-item.home-slider .owl-next {
   color: #fff2e0;
-  position: absolute !important;
+  position: absolute ;
   top: 50%;
   padding: 0px;
   height: 50px;
@@ -900,9 +939,9 @@ h1, h2, h3, h4, h5,
   width: 10px;
   height: 10px;
   border-radius: 50%;
-  background: #fff2e0; }
+  background: var(--ink); }
 .slide-one-item .owl-dots .owl-dot.active span {
-  background: #f16821; }
+  background: var(--deep-red); }
 
 .block-12 {
   position: relative; }
@@ -980,7 +1019,7 @@ h1, h2, h3, h4, h5,
   display: block;
   border-radius: 50%;
   opacity: 1;
-  color: #9d1d19 !important; }
+  color: #9d1d19 ; }
 .block-16 figure .play-button:hover {
   opacity: 1; }
 .block-16 figure .play-button > span {
@@ -1210,7 +1249,7 @@ h1, h2, h3, h4, h5,
   line-height: 80px;
   position: relative;
   border-radius: 50%;
-  margin: 0 auto !important; }
+  margin: 0 auto ; }
 .feature-1 .icon > span, .free-quote .icon > span, .feature-3 .icon > span {
   font-size: 35px;
   color: #fff;
@@ -1256,7 +1295,7 @@ h1, h2, h3, h4, h5,
 .border-primary {
   position: relative; }
 .border-primary h2 {
-  font-weight: 700 !important; }
+  font-weight: 700 ; }
 .border-primary:after {
   position: absolute;
   content: "";
@@ -1274,23 +1313,23 @@ h1, h2, h3, h4, h5,
   -ms-transform: translateX(0%);
   transform: translateX(0%); }
 
-.testimonial {
-  max-width: 800px;
-  margin: 0 auto !important;
+.event-banner 
+{
+  width: 80%;
+  height: 100%;
+  margin: 0 auto ;
   text-align: center; }
-.testimonial blockquote {
-  font-size: 1.5rem;
-  font-style: italic; }
-.testimonial figure img {
-  max-width: 200px;
-  margin: 0 auto;
-  border-radius: 50%; }
+  .event-banner img {
+	height: 100%;
+	width: 100%
+    border-radius: 50%; 
+}
 
 .breadcrumb-custom {
-  font-size: 1rem !important; }
+  font-size: 1rem ; }
 
 .text-muted {
-  color: #fff2e0 !important;
+  color: #fff2e0 ;
   font-size: 12px;
   text-transform: uppercase; }
 
@@ -1376,7 +1415,7 @@ h1, h2, h3, h4, h5,
   padding: 10px 30px; }
 @media (max-width: 1199.98px) {
   .form-search-wrap .btn {
-    width: 100% !important;
+    width: 100% ;
     display: block; } }
 
 .popular-category {
@@ -1424,7 +1463,7 @@ h1, h2, h3, h4, h5,
 
 @media (max-width: 1199.98px) {
   .no-sm-border {
-    border: none !important; } }
+    border: none ; } }
 
 .listing-item {
   position: relative;
@@ -1556,7 +1595,7 @@ h1, h2, h3, h4, h5,
   border-radius: 50%;
   line-height: 50px;
   text-align: center;
-  text-decoration: none !important; }
+  text-decoration: none ; }
 .ft-feature-1 .play span {
   color: #fff;
   display: inline; }
@@ -1657,12 +1696,14 @@ h1, h2, h3, h4, h5,
   -ms-transform: scale(1.05);
   transform: scale(1.05); }
 
-.testimonial-wrap .owl-nav {
+/*
+.event-wrap .owl-nav {
   display: none; }
+*/
 
 .section-sub-title {
   font-size: 13px;
-  color: #adb5bd;
+  color: var(--grey);
   letter-spacing: .2em;
   text-transform: uppercase;
   font-weight: 700; }
@@ -1825,3 +1866,7 @@ h1, h2, h3, h4, h5,
     font-size: 2rem; } }
 .product-item-2 .product-title-wrap h2 a {
   color: #000; }
+  
+.home-section{
+	background-color: var(--deep-red);
+}
