--- a/webapp/src/main/resources/templates/index.html
+++ b/webapp/src/main/resources/templates/index.html
@@ -9,9 +9,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
-    
-    <link href="https://fonts.googleapis.com/css?family=Muli:300,400,700,900" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Julius+Sans+One|Nunito:400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Julius+Sans+One|Nanum+Gothic|Nunito&display=swap" rel="stylesheet"> 
 
     <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
 
@@ -43,7 +41,7 @@
       <div class="site-mobile-menu-body"></div>
     </div>
    
-    <div class="top-bar py-3 bg-light" th:style="'background: #9d1d19!important;'" id="home-section">
+    <div class="top-bar py-3 bg-red text-cream ff-JS" id="home-section">
       <div class="container">
         <div class="row align-items-center">
          
@@ -56,23 +54,20 @@
             </ul>
           </div>
           <div class="col-6">
-            <p class="mb-0 float-right">
-              <span class="mr-3"><a href="tel:8014853913"> <span class="icon-phone mr-2" style="position: relative; top: 2px; color: #fff2e0!important;"></span><span class="d-none d-lg-inline-block text-black">(801)485-3913</span></a></span>
-              <span><a href="mailto:customerservice@citywbooks.com"><span class="icon-envelope mr-2" style="position: relative; top: 2px; color: #fff2e0!important;"></span><span class="d-none d-lg-inline-block text-black">customerservice@citywbooks.com</span></a></span>
-            </p>
-            
+            <p class="mb-0 float-right"><span class="mr-3"><a href="tel:8014853913"> <span class="icon-phone mr-2" style="position: relative; top: 2px; color: white"></span><span class="d-none d-lg-inline-block text-cream">(801)485-3913</span></a></span>
+            <span><a href="mailto:customerservice@citywbooks.com"><span class="icon-envelope mr-2" style="position: relative; top: 2px; color: white;"></span><span class="d-none d-lg-inline-block text-cream">customerservice@citywbooks.com</span></a></span></p>
           </div>
         </div>
       </div> 
     </div>
 
-    <header class="site-navbar py-4 bg-white js-sticky-header site-navbar-target" role="banner" style="background: #fff2e0!important;">
+    <header class="site-navbar py-4 js-sticky-header site-navbar-target bg-white ff-JSH" role="banner">
 
       <div class="container">
         <div class="row align-items-center">
           
           <div class="col-6 col-xl-2">
-            <h1 class="mb-0 site-logo"><a href="/index.html" class="text-black mb-0"><img th:src="@{/images/logos/og_logo.png}" class="img-fluid" ><span class="text-primary"></span> </a></h1>
+            <h1 class="mb-0 site-logo"><a href="/index.html" class="mb-0"><img th:src="@{/images/logos/og_logo.png}" class="img-fluid" ><span class="text-primary"></span> </a></h1>
           </div>
           <div class="col-12 col-md-10 d-none d-xl-block">
             <nav class="site-navigation position-relative text-right" role="navigation">
@@ -82,7 +77,7 @@
                 <li><a href="#products-section" class="nav-link">Products</a></li>
                 <li><a href="#about-section" class="nav-link">About Us</a></li>
                 <li><a href="#special-section" class="nav-link">Special</a></li>
-                <li><a href="#testimonials-section" class="nav-link">Testimonials</a></li>
+                <li><a href="#events-section" class="nav-link">Events</a></li>
                 <li><a href="#blog-section" class="nav-link">Blog</a></li>
                 <li><a href="#contact-section" class="nav-link">Contact</a></li>
               </ul>
@@ -97,7 +92,6 @@
       
     </header>
 
-  
      
     <div class="site-blocks-cover overlay" th:style="'background: url(/images/storefront/central.jpg) no-repeat 50% fixed / cover;'" data-aos="fade" data-stellar-background-ratio="0.5">
       <div class="container">
@@ -445,7 +439,7 @@
         <div class="row align-items-stretch">
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up">
             <div class="unit-4 d-flex">
-              <div class="unit-4-icon mr-4"><span class="text-primary icon-pie_chart" style="color: #9d1d19!important;"></span></div>
+              <div class="unit-4-icon mr-4"><span class="text-primary icon-pie_chart" style="color: #9d1d19;"></span></div>
               <div>
                 <h3>Business Consulting</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
@@ -455,7 +449,7 @@
           </div>
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="unit-4 d-flex">
-              <div class="unit-4-icon mr-4"><span class="text-primary icon-backspace" style="color: #9d1d19!important;"></span></div>
+              <div class="unit-4-icon mr-4"><span class="text-primary icon-backspace" style="color: #9d1d19;"></span></div>
               <div>
                 <h3>Market Analysis</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
@@ -465,7 +459,7 @@
           </div>
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="200">
             <div class="unit-4 d-flex">
-              <div class="unit-4-icon mr-4"><span class="text-primary icon-av_timer" style="color: #9d1d19!important;"></span></div>
+              <div class="unit-4-icon mr-4"><span class="text-primary icon-av_timer" style="color: #9d1d19;"></span></div>
               <div>
                 <h3>User Monitoring</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
@@ -477,7 +471,7 @@
 
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="300">
             <div class="unit-4 d-flex">
-              <div class="unit-4-icon mr-4"><span class="text-primary icon-beenhere" style="color: #9d1d19!important;"></span></div>
+              <div class="unit-4-icon mr-4"><span class="text-primary icon-beenhere" style="color: #9d1d19;"></span></div>
               <div>
                 <h3>Seller Consulting</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
@@ -487,7 +481,7 @@
           </div>
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="400">
             <div class="unit-4 d-flex">
-              <div class="unit-4-icon mr-4"><span class="text-primary icon-business_center" style="color: #9d1d19!important;"></span></div>
+              <div class="unit-4-icon mr-4"><span class="text-primary icon-business_center" style="color: #9d1d19;"></span></div>
               <div>
                 <h3>Financial Investment</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
@@ -497,7 +491,7 @@
           </div>
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="500">
             <div class="unit-4 d-flex">
-              <div class="unit-4-icon mr-4"><span class="text-primary icon-cloud_done" style="color: #9d1d19!important;"></span></div>
+              <div class="unit-4-icon mr-4"><span class="text-primary icon-cloud_done" style="color: #9d1d19;"></span></div>
               <div>
                 <h3>Financial Management</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
@@ -510,74 +504,44 @@
       </div>
     </div>
 
-    <div class="site-section testimonial-wrap" id="testimonials-section">
+    <div class="site-section event-wrap" id="events-section">
       <div class="container">
         <div class="row mb-5">
           <div class="col-12 text-center">
-            <h3 class="section-sub-title">People Says</h3>
-            <h2 class="section-title mb-3">Testimonials</h2>
+			<h3 class="section-sub-title">ONGOING</h3>
+			<h2 class="mb-3 text-leather ff-NG">EVENTS</h2>
           </div>
         </div>
       </div>
       <div class="slide-one-item home-slider owl-carousel">
           <div>
-            <div class="testimonial">
+            <div class="event-banner">
               <figure class="mb-4 d-block align-items-center justify-content-center">
-                <div><img th:src="@{/images/bookshelves/cbe_0040.JPG}" alt="Image" class="w-100 img-fluid mb-3"></div>
+                <div><img th:src="@{/banners/bannerWarehouse.png}" alt="memorynotfound warehouse banner" class="w-100 img-fluid mb-3"></div>
               </figure>
-              <blockquote class="mb-3">
-                <p>&ldquo;Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur unde reprehenderit aperiam quaerat fugiat repudiandae explicabo animi minima fuga beatae illum eligendi incidunt consequatur. Amet dolores excepturi earum unde iusto.&rdquo;</p>
-              </blockquote>
-              <p class="text-black"><strong>John Smith</strong></p>
-
-              
+              <h1 class="text-ink ff-NSB">Warehouse Sale Event</h1>
+              <p class="text-grey ff-N">Event details.</p>              
             </div>
           </div>
+          
           <div>
-            <div class="testimonial">
-              
+            <div class="event-banner">
               <figure class="mb-4 d-block align-items-center justify-content-center">
-                <div><img th:src="@{/images/bookshelves/cbe_0040.JPG}" alt="Image" class="w-100 img-fluid mb-3"></div>
+                <div><img th:src="@{/banners/bannerHalloween.png}" alt="memorynotfound halloween banner" class="w-100 img-fluid mb-3"></div>
               </figure>
-
-              <blockquote class="mb-3">
-                <p>&ldquo;Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur unde reprehenderit aperiam quaerat fugiat repudiandae explicabo animi minima fuga beatae illum eligendi incidunt consequatur. Amet dolores excepturi earum unde iusto.&rdquo;</p>
-              </blockquote>
-              
-              <p class="text-black"><strong>Robert Aguilar</strong></p>
-              
-              
+              <h1 class="text-ink ff-NSB">Halloween Event</h1>
+              <p class="text-grey ff-N">Event details.</p>              
             </div>
           </div>
 
           <div>
-            <div class="testimonial">
+            <div class="event-banner">
               <figure class="mb-4 d-block align-items-center justify-content-center">
-                <div><img th:src="@{/images/bookshelves/cbe_0040.JPG}" alt="Image" class="w-100 img-fluid mb-3"></div>
+                <div><img th:src="@{/banners/bannerReadingNight.png}" alt="memorynotfound reading night banner" class="w-100 img-fluid mb-3"></div>
               </figure>
-              <blockquote class="mb-3">
-                <p>&ldquo;Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur unde reprehenderit aperiam quaerat fugiat repudiandae explicabo animi minima fuga beatae illum eligendi incidunt consequatur. Amet dolores excepturi earum unde iusto.&rdquo;</p>
-              </blockquote>
-              <p class="text-black"><strong>Roger Spears</strong></p>
-
-              
+              <h1 class="text-ink ff-NSB">Reading Night Event</h1>
+              <p class="text-grey ff-N">Event details.</p>              
             </div>
-           
-          </div>
-
-          <div>
-            <div class="testimonial">
-              <figure class="mb-4 d-block align-items-center justify-content-center">
-                <div><img th:src="@{/images/bookshelves/cbe_0040.JPG}" alt="Image" class="w-100 img-fluid mb-3"></div>
-              </figure>
-              <blockquote class="mb-3">
-                <p>&ldquo;Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur unde reprehenderit aperiam quaerat fugiat repudiandae explicabo animi minima fuga beatae illum eligendi incidunt consequatur. Amet dolores excepturi earum unde iusto.&rdquo;</p>
-              </blockquote>
-              <p class="text-black"><strong>Kyle McDonald</strong></p>
-
-              
-            </div>
-
           </div>
 
         </div>
@@ -630,7 +594,7 @@
    
 
 
-    <div class="site-section bg-light" id="contact-section" style="background: #8f5100!important;">
+    <div class="site-section bg-light" id="contact-section" style="background: #8f5100;">
       <div class="container">
         <div class="row mb-5">
           <div class="col-12 text-center">
@@ -643,7 +607,7 @@
 
             
 
-            <form action="#" class="p-5 bg-white" style="background: #fff2e0!important;">
+            <form action="#" class="p-5 bg-white" style="background: #fff2e0;">
               
               <h2 class="h4 text-black mb-5">Contact Form</h2> 
 
