commented out specials section

--- a/webapp/src/main/resources/templates/index.html
+++ b/webapp/src/main/resources/templates/index.html
@@ -410,11 +410,12 @@
       </div>
     </div>
     
+    <!--  
     <div class="site-blocks-cover overlay get-notification" id="special-section" th:style="'background: url(/images/storefront/central.jpg)  no-repeat 50% fixed / cover;'" data-aos="fade">
       <div class="container">
 
         <div class="row align-items-center justify-content-center">
-          <div class="col-md-7 text-center" style="display: none;">
+          <div class="col-md-7 text-center">
             <h3 class="section-sub-title">Special Promo</h3>
             <h3 class="section-title text-white mb-4">Summer Sale</h3>
             <p class="mb-5 lead">Repudiandae nostrum natus excepturi fuga ullam accusantium vel ut eveniet aut consequatur laboriosam ipsam.</p>
@@ -427,6 +428,7 @@
 
       </div>
     </div>
+    -->
 
     <div class="site-section bg-light" id="services-section">
       <div class="container">
