Added main image as about background

--- a/webapp/src/main/resources/static/css/style.css
+++ b/webapp/src/main/resources/static/css/style.css
@@ -596,6 +596,7 @@ h1, h2, h3, h4, h5,
 
 /* Blocks */
 .site-blocks-cover {
+  background: url(/images/storefront/central.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top;
