--- a/webapp/src/main/resources/templates/index.html
+++ b/webapp/src/main/resources/templates/index.html
@@ -93,7 +93,7 @@
     </header>
 
      
-    <div class="site-blocks-cover overlay" th:style="'background: url(/images/storefront/central.jpg) no-repeat 50% fixed / cover;'" data-aos="fade" data-stellar-background-ratio="0.5">
+    <div class="site-blocks-cover overlay" data-aos="fade" data-stellar-background-ratio="0.5">
       <div class="container">
         <div class="row align-items-center justify-content-center">
 
