--- a/webapp/src/main/resources/templates/index.html
+++ b/webapp/src/main/resources/templates/index.html
@@ -511,14 +511,14 @@
         <div class="row mb-5">
           <div class="col-12 text-center">
 			<h3 class="section-sub-title">ONGOING</h3>
-			<h2 class="mb-3 text-leather ff-NG">EVENTS</h2>
+			<h2 class="mb-1 text-leather ff-NG">EVENTS</h2>
           </div>
         </div>
       </div>
       <div class="slide-one-item home-slider owl-carousel">
           <div>
             <div class="event-banner">
-              <figure class="mb-4 d-block align-items-center justify-content-center">
+              <figure class="mb-3 d-block align-items-center justify-content-center">
                 <div><img th:src="@{/banners/bannerWarehouse.png}" alt="memorynotfound warehouse banner" class="w-100 img-fluid mb-3"></div>
               </figure>
               <h1 class="text-ink ff-NSB">Warehouse Sale Event</h1>
@@ -712,7 +712,11 @@
         </div>
       </div>
     </footer>
-
+    
+  
+    <div class="sticky-contact-footer text-ink ff-JS">
+    	<p>2017 S 1100 E Salt Lake City, Utah<br>Contact Us: <a href="tel:8014853913">(801)-485-3913</a></p>
+    </div>
   </div> <!-- .site-wrap -->
 
   <script th:src="@{/js/jquery-3.3.1.min.js}"></script>
