Fixed elements that looked different after deployment.

--- a/webapp/src/main/resources/templates/index.html
+++ b/webapp/src/main/resources/templates/index.html
@@ -54,7 +54,7 @@
             </ul>
           </div>
           <div class="col-6">
-            <p class="mb-0 float-right"><span class="mr-3"><a href="tel:8014853913"> <span class="icon-phone mr-2" style="position: relative; top: 2px; color: white"></span><span class="d-none d-lg-inline-block text-cream">(801)485-3913</span></a></span>
+            <p class="mb-0 float-right"><span class="mr-3"><a href="tel:8014853913"> <span class="icon-phone mr-2" style="position: relative; top: 2px; color: white"></span><span class="d-none d-lg-inline-block text-cream">(801)-485-3913</span></a></span>
             <span><a href="mailto:customerservice@citywbooks.com"><span class="icon-envelope mr-2" style="position: relative; top: 2px; color: white;"></span><span class="d-none d-lg-inline-block text-cream">customerservice@citywbooks.com</span></a></span></p>
           </div>
         </div>
@@ -518,32 +518,35 @@
       <div class="slide-one-item home-slider owl-carousel">
           <div>
             <div class="event-banner">
-              <figure class="mb-3 d-block align-items-center justify-content-center">
-                <div><img th:src="@{/banners/bannerWarehouse.png}" alt="memorynotfound warehouse banner" class="w-100 img-fluid mb-3"></div>
-              </figure>
-              <h1 class="text-ink ff-NSB">Warehouse Sale Event</h1>
-              <p class="text-grey ff-N">Event details.</p>              
+              <figure class="mb-4 d-block align-items-center justify-content-center">
+                <div><img th:src="@{/banners/bannerWarehouse.png}" alt="memorynotfound warehouse banner" class="mb-3"></div>
+              </figure>             
             </div>
+            <p></p>
+            <h1 class="text-ink ff-NSB">Warehouse Sale Event</h1>
+            <p class="text-grey ff-N">Event details.</p> 
           </div>
           
           <div>
             <div class="event-banner">
               <figure class="mb-4 d-block align-items-center justify-content-center">
-                <div><img th:src="@{/banners/bannerHalloween.png}" alt="memorynotfound halloween banner" class="w-100 img-fluid mb-3"></div>
-              </figure>
-              <h1 class="text-ink ff-NSB">Halloween Event</h1>
-              <p class="text-grey ff-N">Event details.</p>              
+                <div><img th:src="@{/banners/bannerHalloween.png}" alt="memorynotfound halloween banner" class="mb-3"></div>
+              </figure>       
             </div>
+            <p></p>
+            <h1 class="text-ink ff-NSB">Halloween Event</h1>
+            <p class="text-grey ff-N">Event details.</p>       
           </div>
 
           <div>
             <div class="event-banner">
               <figure class="mb-4 d-block align-items-center justify-content-center">
-                <div><img th:src="@{/banners/bannerReadingNight.png}" alt="memorynotfound reading night banner" class="w-100 img-fluid mb-3"></div>
+                <div><img th:src="@{/banners/bannerReadingNight.png}" alt="memorynotfound reading night banner" class="mb-3"></div>
               </figure>
-              <h1 class="text-ink ff-NSB">Reading Night Event</h1>
-              <p class="text-grey ff-N">Event details.</p>              
             </div>
+            <p></p>
+            <h1 class="text-ink ff-NSB">Reading Night Event</h1>
+            <p class="text-grey ff-N">Event details.</p>              
           </div>
 
         </div>
