--- a/webapp/src/main/resources/static/css/style.css
+++ b/webapp/src/main/resources/static/css/style.css
@@ -596,7 +596,7 @@ h1, h2, h3, h4, h5,
 
 /* Blocks */
 .site-blocks-cover {
-  background: url(/images/storefront/central.jpg);
+  background: url('../images/storefront/central.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top;
@@ -1316,14 +1316,16 @@ h1, h2, h3, h4, h5,
 
 .event-banner 
 {
+  position: relative;
   width: 80%;
+  height: 60%;
+  overflow: hidden;
+  text-align: center;
+  margin: 0 auto;
+}
+.event-banner img {
+  width: 100%;
   height: 100%;
-  margin: 0 auto ;
-  text-align: center; }
-  .event-banner img {
-	height: 100%;
-	width: 100%
-    border-radius: 50%; 
 }
 
 .breadcrumb-custom {
@@ -1701,6 +1703,10 @@ h1, h2, h3, h4, h5,
 .event-wrap .owl-nav {
   display: none; }
 */
+.event-wrap
+{
+	text-align: center;
+}
 
 .section-sub-title {
   font-size: 13px;
