--- a/webapp/src/main/resources/templates/index.html
+++ b/webapp/src/main/resources/templates/index.html
@@ -11,6 +11,17 @@
     
     <link href="https://fonts.googleapis.com/css?family=Julius+Sans+One|Nanum+Gothic|Nunito&display=swap" rel="stylesheet"> 
 
+
+
+	<link rel="apple-touch-icon" sizes="180x180" th:href="@{/images/favicon/apple-touch-icon.png}"/>
+	<link rel="icon" type="image/png" sizes="32x32" th:href="@{/images/favicon/favicon-32x32.png}"/>
+	<link rel="icon" type="image/png" sizes="16x16" th:href="@{/images/favicon/favicon-16x16.png}"/>
+	<link rel="manifest" th:href="@{/images/favicon/site.webmanifest}"/>
+	<link rel="mask-icon" th:href="@{/images/favicon/safari-pinned-tab.svg}" color="#5bbad5"/>
+	<meta name="msapplication-TileColor" content="#da532c"/>
+	<meta name="theme-color" content="#ffffff"/>
+
+
     <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
 
     <link rel="stylesheet" th:href="@{/fonts/icomoon/style.css}">
