--- a/webapp/src/main/resources/templates/index.html
+++ b/webapp/src/main/resources/templates/index.html
@@ -11,8 +11,6 @@
     
     <link href="https://fonts.googleapis.com/css?family=Julius+Sans+One|Nanum+Gothic|Nunito&display=swap" rel="stylesheet"> 
 
-
-
 	<link rel="apple-touch-icon" sizes="180x180" th:href="@{/images/favicon/apple-touch-icon.png}"/>
 	<link rel="icon" type="image/png" sizes="32x32" th:href="@{/images/favicon/favicon-32x32.png}"/>
 	<link rel="icon" type="image/png" sizes="16x16" th:href="@{/images/favicon/favicon-16x16.png}"/>
@@ -20,7 +18,6 @@
 	<link rel="mask-icon" th:href="@{/images/favicon/safari-pinned-tab.svg}" color="#5bbad5"/>
 	<meta name="msapplication-TileColor" content="#da532c"/>
 	<meta name="theme-color" content="#ffffff"/>
-
 
     <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
 
@@ -87,9 +84,9 @@
                 <li><a href="#home-section" class="nav-link">Home</a></li>
                 <li><a href="#events-section" class="nav-link">Events</a></li>
                 <li><a href="#staff-picks-section" class="nav-link">Staff Picks</a></li>
-          <li><a href="#event-details" class="nav-link">Event History</a></li>	
-         <li><a href="" class="nav-link">Photos</a></li>	
-<li><a href="" class="nav-link">Search</a></li>	
+          <!--	<li><a href="#event-details" class="nav-link">Event History</a></li>	-->
+          <!--	<li><a href="" class="nav-link">Photos</a></li>	-->          
+          <!--	<li><a href="" class="nav-link">Search</a></li>	-->
               </ul>
             </nav>
           </div>
