--- a/webapp/src/main/resources/templates/index.html
+++ b/webapp/src/main/resources/templates/index.html
@@ -84,9 +84,9 @@
                 <li><a href="#home-section" class="nav-link">Home</a></li>
                 <li><a href="#events-section" class="nav-link">Events</a></li>
                 <li><a href="#staff-picks-section" class="nav-link">Staff Picks</a></li>
-          <!--	<li><a href="#event-details" class="nav-link">Event History</a></li>	-->
-          <!--	<li><a href="" class="nav-link">Photos</a></li>	-->          
-          <!--	<li><a href="" class="nav-link">Search</a></li>	-->
+			<!--<li><a href="#event-details" class="nav-link">Event History</a></li> -->
+          		<li><a href="" class="nav-link">Photos</a></li>         
+          		<li><a href="" class="nav-link">Search</a></li>
               </ul>
             </nav>
           </div>
@@ -172,6 +172,65 @@
         </div>
     </div>
 
+    <div class="site-section bg-light" id="event-details">
+      <div class="container">
+        <div class="row mb-5 justify-content-center">
+          <div class="col-md-6 text-center">
+            <h3 class="section-sub-title">Awesome Products</h3>
+            <h2 class="section-title mb-3">Featured Products</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae nostrum natus excepturi fuga ullam accusantium vel ut eveniet aut consequatur laboriosam ipsam.</p>
+          </div>
+        </div>
+        <div class="bg-white py-4 mb-4">
+          <div class="row mx-4 my-4 product-item-2 align-items-start">
+            <div class="col-md-6 mb-5 mb-md-0">
+              <img th:src="@{/images/bookshelves/cbe_0040.JPG}" alt="Image" class="img-fluid">
+            </div>
+           
+            <div class="col-md-5 ml-auto product-title-wrap">
+              <span class="number">01.</span>
+              <h3 class="text-black mb-4 font-weight-bold">About This Product</h3>
+              <p class="mb-4">Et tempora id nostrum saepe amet doloribus deserunt totam officiis cupiditate asperiores quasi accusantium voluptatum dolorem quae sapiente voluptatem ratione odio iure blanditiis earum fuga molestiae alias dicta perferendis inventore!</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus soluta assumenda sed optio, error at?</p>
+              
+              <div class="mb-4"> 
+                <h3 class="text-black font-weight-bold h5">Price:</h3>
+                <div class="price"><del class="mr-2">$269.00</del> $69.00</div>
+              </div>
+              <p>
+                <a href="#" class="btn btn-black btn-outline-black rounded-0 d-block mb-2 mb-lg-0 d-lg-inline-block">View Details</a>
+                <a href="#" class="btn btn-black rounded-0 d-block d-lg-inline-block">Add To Cart</a>
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="bg-white py-4">
+          <div class="row mx-4 my-4 product-item-2 align-items-start">
+            <div class="col-md-6 mb-5 mb-md-0 order-1 order-md-2">
+              <img th:src="@{/images/bookshelves/cbe_0040.JPG}" alt="Image" class="img-fluid">
+            </div>
+           
+            <div class="col-md-5 mr-auto product-title-wrap order-2 order-md-1">
+              <span class="number">02.</span>
+              <h3 class="text-black mb-4 font-weight-bold">About This Product</h3>
+              <p class="mb-4">Et tempora id nostrum saepe amet doloribus deserunt totam officiis cupiditate asperiores quasi accusantium voluptatum dolorem quae sapiente voluptatem ratione odio iure blanditiis earum fuga molestiae alias dicta perferendis inventore!</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus soluta assumenda sed optio, error at?</p>
+              
+              <div class="mb-4"> 
+                <h3 class="text-black font-weight-bold h5">Price:</h3>
+                <div class="price"><del class="mr-2">$269.00</del> $69.00</div>
+              </div>
+              <p>
+                <a href="#" class="btn btn-black btn-outline-black rounded-0 d-block mb-2 mb-lg-0 d-lg-inline-block">View Details</a>
+                <a href="#" class="btn btn-black rounded-0 d-block d-lg-inline-block">Add To Cart</a>
+              </p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
     
     <div class="site-section" id="staff-picks-section">
       <div class="container">
@@ -327,66 +386,6 @@
       </div>
 	</div>
 	-->
-
-    <div class="site-section bg-light" id="event-details">
-      <div class="container">
-        <div class="row mb-5 justify-content-center">
-          <div class="col-md-6 text-center">
-            <h3 class="section-sub-title">Awesome Products</h3>
-            <h2 class="section-title mb-3">Featured Products</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae nostrum natus excepturi fuga ullam accusantium vel ut eveniet aut consequatur laboriosam ipsam.</p>
-          </div>
-        </div>
-        <div class="bg-white py-4 mb-4">
-          <div class="row mx-4 my-4 product-item-2 align-items-start">
-            <div class="col-md-6 mb-5 mb-md-0">
-              <img th:src="@{/images/bookshelves/cbe_0040.JPG}" alt="Image" class="img-fluid">
-            </div>
-           
-            <div class="col-md-5 ml-auto product-title-wrap">
-              <span class="number">01.</span>
-              <h3 class="text-black mb-4 font-weight-bold">About This Product</h3>
-              <p class="mb-4">Et tempora id nostrum saepe amet doloribus deserunt totam officiis cupiditate asperiores quasi accusantium voluptatum dolorem quae sapiente voluptatem ratione odio iure blanditiis earum fuga molestiae alias dicta perferendis inventore!</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus soluta assumenda sed optio, error at?</p>
-              
-              <div class="mb-4"> 
-                <h3 class="text-black font-weight-bold h5">Price:</h3>
-                <div class="price"><del class="mr-2">$269.00</del> $69.00</div>
-              </div>
-              <p>
-                <a href="#" class="btn btn-black btn-outline-black rounded-0 d-block mb-2 mb-lg-0 d-lg-inline-block">View Details</a>
-                <a href="#" class="btn btn-black rounded-0 d-block d-lg-inline-block">Add To Cart</a>
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="bg-white py-4">
-          <div class="row mx-4 my-4 product-item-2 align-items-start">
-            <div class="col-md-6 mb-5 mb-md-0 order-1 order-md-2">
-              <img th:src="@{/images/bookshelves/cbe_0040.JPG}" alt="Image" class="img-fluid">
-            </div>
-           
-            <div class="col-md-5 mr-auto product-title-wrap order-2 order-md-1">
-              <span class="number">02.</span>
-              <h3 class="text-black mb-4 font-weight-bold">About This Product</h3>
-              <p class="mb-4">Et tempora id nostrum saepe amet doloribus deserunt totam officiis cupiditate asperiores quasi accusantium voluptatum dolorem quae sapiente voluptatem ratione odio iure blanditiis earum fuga molestiae alias dicta perferendis inventore!</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus soluta assumenda sed optio, error at?</p>
-              
-              <div class="mb-4"> 
-                <h3 class="text-black font-weight-bold h5">Price:</h3>
-                <div class="price"><del class="mr-2">$269.00</del> $69.00</div>
-              </div>
-              <p>
-                <a href="#" class="btn btn-black btn-outline-black rounded-0 d-block mb-2 mb-lg-0 d-lg-inline-block">View Details</a>
-                <a href="#" class="btn btn-black rounded-0 d-block d-lg-inline-block">Add To Cart</a>
-              </p>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </div>
     
     <!--  
     <div class="site-blocks-cover overlay get-notification" id="special-section" th:style="'background: url(/images/storefront/central.jpg)  no-repeat 50% fixed / cover;'" data-aos="fade">
