--- a/webapp/src/main/resources/templates/index.html
+++ b/webapp/src/main/resources/templates/index.html
@@ -107,12 +107,12 @@
           <div class="col-md-12" data-aos="fade-up" data-aos-delay="400">
                         
             <div class="row mb-4">
-              <div class="col-md-7" th:style="'background: rgb(6,6,8,0.5);'">
-                <h1>Welcome</h1>
-                <p class="mb-5 lead">We are an independently-owned new and used bookstore located in Salt Lake City, Utah. 
+              <div class="col-md-7" th:style="'background: rgb(6,6,8,0.75);'">
+                <h1 class="ff-JSO">Welcome</h1>
+                <p class="mb-5 text-white ff-N">We are an independently-owned new and used bookstore located in Salt Lake City, Utah. 
                   We have over 90,000 items in our constantly-changing inventory, and we catalog an additional 1,000+ books per week. 
                   Our inventory consists of almost every literary genre you can think of. Additionally, our book inventory holds some rare and out-of-print titles.<br>
-                  <br>If you have any questions, please give us a <a th:href="@{tel:8014853913}">call</a> or <a>email</a> us. We're always happy to help!</p>
+                  <br>If you have any questions, please give us a <a href="tel:8014853913">call</a> or <a href="mailto:customerservice@citywbooks.com">email</a> us. We're always happy to help!</p>
                 <div>
                   <a href="#" class="btn btn-white btn-outline-white py-3 px-5 rounded-0 mb-2 d-block">Shop Now</a>
                   <a href="#" class="btn btn-white btn-outline-white py-3 px-5 rounded-0 mb-2 d-block">Events</a>
