--- a/webapp/src/main/resources/templates/index.html
+++ b/webapp/src/main/resources/templates/index.html
@@ -69,24 +69,24 @@
       </div> 
     </div>
 
-    <header class="site-navbar py-4 js-sticky-header site-navbar-target bg-white ff-JSH" role="banner">
+    <header class="site-navbar js-sticky-header py-4 site-navbar-target bg-white ff-JSH" role="banner">
 
-      <div class="container">
-        <div class="row align-items-center">
-          
+      <div>
+        <div class="row align-items-center nav-element">
           <div class="col-6 col-xl-2">
-            <h1 class="mb-0 site-logo"><a href="/index.html" class="mb-0"><img th:src="@{/images/logos/og_logo.png}" class="img-fluid" ><span class="text-primary"></span> </a></h1>
+            <h1 class="mb-0 site-logo"><a href="/index.html" class="mb-0"><img th:src="@{/images/logos/og_logo.png}" class="fluid-img" ><span class="text-primary"></span> </a></h1>
           </div>
           <div class="col-12 col-md-10 d-none d-xl-block">
-            <nav class="site-navigation position-relative text-right" role="navigation">
+            <nav class="site-navigation position-relative" role="navigation">
 
-              <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-                <li><a href="#home-section" class="nav-link">Home</a></li>
-                <li><a href="#events-section" class="nav-link">Events</a></li>
-                <li><a href="#staff-picks-section" class="nav-link">Staff Picks</a></li>
+              <ul class="site-menu main-menu">
+                <li><a href="#home-section" class="nav-element">Home</a></li>
+                <li><a href="#events-section" class="nav-element">Events</a></li>
+                <li><a href="#staff-picks-section" class="nav-element">Staff Picks</a></li>
 			<!--<li><a href="#event-details" class="nav-link">Event History</a></li> -->
-          		<li><a href="" class="nav-link">Photos</a></li>         
-          		<li><a href="" class="nav-link">Search</a></li>
+          		<li><a href="" class="nav-element">Photos</a></li>         
+          		<li><a href="" class="nav-element">Search</a></li>
+          		<li></li> <!-- spacing -->
               </ul>
             </nav>
           </div>
@@ -128,10 +128,10 @@
 
     <div class="site-section event-wrap" id="events-section">
       <div class="container">
-        <div class="row mb-5">
+        <div class="row mb-4">
           <div class="col-12 text-center">
-			<h3 class="section-sub-title">ONGOING</h3>
-			<h2 class="mb-1 text-leather ff-NG">EVENTS</h2>
+          	<h3 class="section-sub-title">ONGOING</h3>
+			<h2 class="text-red ff-NG">EVENTS</h2>
           </div>
         </div>
       </div>
@@ -143,7 +143,6 @@
               </figure>             
             </div>
             <p></p>
-            <h1 class="text-ink ff-NSB">Warehouse Sale Event</h1>
             <p class="text-grey ff-N">Event details.</p> 
           </div>
           
@@ -154,7 +153,6 @@
               </figure>       
             </div>
             <p></p>
-            <h1 class="text-ink ff-NSB">Halloween Event</h1>
             <p class="text-grey ff-N">Event details.</p>       
           </div>
 
@@ -165,7 +163,6 @@
               </figure>
             </div>
             <p></p>
-            <h1 class="text-ink ff-NSB">Reading Night Event</h1>
             <p class="text-grey ff-N">Event details.</p>              
           </div>
 
@@ -176,8 +173,7 @@
       <div class="container">
         <div class="row mb-5 justify-content-center">
           <div class="col-md-6 text-center">
-            <h3 class="section-sub-title">Awesome Products</h3>
-            <h2 class="section-title mb-3">Featured Products</h2>
+            <h2 class="mb-3 text-red ff-NG">Event History</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae nostrum natus excepturi fuga ullam accusantium vel ut eveniet aut consequatur laboriosam ipsam.</p>
           </div>
         </div>
@@ -188,19 +184,11 @@
             </div>
            
             <div class="col-md-5 ml-auto product-title-wrap">
-              <span class="number">01.</span>
-              <h3 class="text-black mb-4 font-weight-bold">About This Product</h3>
+              <span class="shadow-text">A</span>
+              <h3 class="text-ink mb-4 ff-NSB">Event A</h3>
               <p class="mb-4">Et tempora id nostrum saepe amet doloribus deserunt totam officiis cupiditate asperiores quasi accusantium voluptatum dolorem quae sapiente voluptatem ratione odio iure blanditiis earum fuga molestiae alias dicta perferendis inventore!</p>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus soluta assumenda sed optio, error at?</p>
               
-              <div class="mb-4"> 
-                <h3 class="text-black font-weight-bold h5">Price:</h3>
-                <div class="price"><del class="mr-2">$269.00</del> $69.00</div>
-              </div>
-              <p>
-                <a href="#" class="btn btn-black btn-outline-black rounded-0 d-block mb-2 mb-lg-0 d-lg-inline-block">View Details</a>
-                <a href="#" class="btn btn-black rounded-0 d-block d-lg-inline-block">Add To Cart</a>
-              </p>
             </div>
           </div>
         </div>
@@ -212,19 +200,11 @@
             </div>
            
             <div class="col-md-5 mr-auto product-title-wrap order-2 order-md-1">
-              <span class="number">02.</span>
-              <h3 class="text-black mb-4 font-weight-bold">About This Product</h3>
+              <span class="shadow-text">B</span>
+              <h3 class="text-ink mb-4 ff-NSB">Event B</h3>
               <p class="mb-4">Et tempora id nostrum saepe amet doloribus deserunt totam officiis cupiditate asperiores quasi accusantium voluptatum dolorem quae sapiente voluptatem ratione odio iure blanditiis earum fuga molestiae alias dicta perferendis inventore!</p>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus soluta assumenda sed optio, error at?</p>
               
-              <div class="mb-4"> 
-                <h3 class="text-black font-weight-bold h5">Price:</h3>
-                <div class="price"><del class="mr-2">$269.00</del> $69.00</div>
-              </div>
-              <p>
-                <a href="#" class="btn btn-black btn-outline-black rounded-0 d-block mb-2 mb-lg-0 d-lg-inline-block">View Details</a>
-                <a href="#" class="btn btn-black rounded-0 d-block d-lg-inline-block">Add To Cart</a>
-              </p>
             </div>
           </div>
         </div>
@@ -236,8 +216,8 @@
       <div class="container">
         <div class="row mb-5 justify-content-center">
           <div class="col-md-6 text-center">
-            <h3 class="section-sub-title">Popular Products</h3>
-            <h2 class="section-title mb-3">Our Products</h2>
+            <h3 class="section-sub-title">Our</h3>
+            <h2 class="mb-3 ff-NG text-red">Staff Picks</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae nostrum natus excepturi fuga ullam accusantium vel ut eveniet aut consequatur laboriosam ipsam.</p>
           </div>
         </div>
